--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "webpack-spritesmith": "^0.3.5"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "jquery": "^2.2.4",
-    "swiper": "^3.4.2"
+    "bootstrap": "^4.0.0",
+    "jquery": "^1.12.4",
+    "popper.js": "^1.12.9"
   }
 }
