--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "webpack-spritesmith": "^0.3.5"
   },
   "dependencies": {
+    "accounting": "^0.4.1",
     "bootstrap": "^4.0.0",
-    "jquery": "^1.12.4",
+    "jquery": "^2.2.4",
     "popper.js": "^1.12.9"
   }
 }
