--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "dependencies": {
     "accounting": "^0.4.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta.2",
     "jquery": "^2.2.4",
     "popper.js": "^1.14.1"
   }
